FIX/ Ui adjustment to sidebar on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 }
 
 :root {
-  --secondary-color: #000b06;
+  --secondary-color: #02000a;
   --primary-color: #01000c;
   --text-color: #c8d1d0;
   --light-color: #46434c;
@@ -123,7 +123,7 @@ a {
     opacity: 0;
   }
   // hide if device is touchscreen or mobile
-  @media (hover: none) and (pointer: coarse) {
+  @media (hover: none) {
     display: none;
   }
 }
@@ -144,7 +144,7 @@ a {
     background-color: #46434c50;
     border: none;
   }
-  @media (hover: none) and (pointer: coarse) {
+  @media (hover: none) {
     display: none;
   }
 }
