--- a/src/Components/SideBar/SideBar.scss
+++ b/src/Components/SideBar/SideBar.scss
@@ -9,7 +9,7 @@
   z-index: 6;
   left: 0;
   margin-left: 0;
-  background-color: var(--primary-color);
+  background-color: #02000a;
   box-shadow: var(--box-shadow);
   // border-top-right-radius: 5px;
   // border-bottom-right-radius: 5px;
@@ -19,12 +19,12 @@
   @include respond(phone) {
     flex-direction: row;
     top: auto;
-    bottom: 01rem;
+    bottom: 1.3rem;
     height: fit-content;
     width: 100%;
     left: 50%;
     transform: translate(-50%, 50%);
-    border: 1px solid var(--light-color);
+    border: 1px solid #02001c;
     border-left: 0;
     border-top-left-radius: 5px;
     border-right: 0;
